# game-save-manager

./: .gitignore  README.md  README_EN.md  components.d.ts  package.json  pnpm-lock.yaml  vite.config.ts
.github/: FUNDING.yml
doc/en/: README.md
doc/zh-CN/: README.md
locales/: en_US.json  fr.json  ko.json  zh_SIMPLIFIED.json
src/: App.vue  i18n.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: archive.rs  backup.rs  cloud.rs  config.rs  default_value.rs  errors.rs  ipc_handler.rs  main.rs  tray.rs
src-tauri/src/backup/: archive.rs  game.rs  game_snapshots.rs  mod.rs  save_unit.rs  snapshot.rs  utils.rs
src-tauri/src/cloud_sync/: backend.rs  cloud_settings.rs  mod.rs  utils.rs
src-tauri/src/config/: app_config.rs  config.rs  mod.rs  quick_actions_settings.rs  settings.rs  utils.rs
src-tauri/src/quick_actions/: hotkeys.rs  mod.rs  timer.rs  tray.rs  utils.rs
src-tauri/src/traits/: mod.rs  sanitization.rs
src/components/: FavoriteSideBar.vue  HotkeySelector.vue  MainSideBar.vue  SaveLocationDrawer.vue
src/locales/: zh_SIMPLIFIED.json
src/router/: index.ts
src/schemas/: BackendTypes.ts  hotkeyMap.ts  saveTypes.ts
src/stores/: ConfigFile.ts
src/utils/: notifications.ts
src/views/: AddGame.vue  GameList.vue  GameManage.vue  Home.vue  Settings.vue  SyncSettings.vue
