[package]
name = "rusty-game-save-manager"
version = "1.0.0"
description = "A save manager for games"
authors = ["Sworld"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.8", features = [
    "notification-all",
    "shell-open",
    "dialog",
    "system-tray",
    "notification",
] }
anyhow = "1.0.69"
chrono = "0.4.23"
zip = "2.1.3"
fs_extra = "1.3.0"
open = "5.0.1"
thiserror = "1.0.40"
opendal = { version = "0.47.0", features = ["services-webdav"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
rust-i18n = "3.0.1"
rust-embed = { version = "8.4.0", features = ["debug-embed", "compression"] }
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
tracing-appender = "0.2.3"
tracing = "0.1.40"
semver = "1.0.23"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 'z'
debug = 1
lto = true
incremental = false
codegen-units = 1
strip = "debuginfo"
